[package]
name = "primesq"
version = "0.1.0"
authors = ["chrisr"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
humantime = "2.1.0"
primal = "0.3.0"
# serde = { version = "1.0.123", features = ["derive"] }
# serde_json = "1.0.61"
